--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="simple_listview">simple listview</string>
+    <string name="async_imageloader">async imageloader</string>
     <string name="no_data">No Data</string>
 
 </resources>
