--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="tab2">TAB2</string>
     <string name="tab3">TAB3</string>
     <string name="tab4">TAB4</string>
+    
+    <string name="array_adapter">Array Adapter</string>
 </resources>
